# k1s

./: Dockerfile  README.md  auto_scale_io.py  docker-compose.yaml  docker_stats_20241031112211.csv  docker_stats_20241031112801.csv  index.html  ngrinder-compose.yaml  stats2csv.sh
auto_scailer/: README.md  pyproject.toml
auto_scailer/src/auto_scailer/: auto_scailer.py  utils.py
auto_scailer/src/auto_scailer/config/: config.ini
docker/httpd/: Dockerfile  my-httpd.conf
docker/nginx/: default.conf
